# eduhipc2019

./: .gitignore  Doxyfile-mcss  LICENSE  annotated.html  files.html  group__io.html  group__rdf.html  index.html  inputOutput_8hpp.html  modules.html  namespaceio.html  namespacerdf.html  namespaces.html  namespacestd.html  pages.html  projIndex.md  rdf_8hpp.html  readme.md  readme.org  searchdata-v1.js
code/cpp/: CMakeLists.txt
code/cpp/include/: generic.hpp  inputOutput.hpp  rdf.hpp
code/cpp/src/: inputOutput.cpp  main.cpp  rdf.cpp
paper/src/: refs.bib  rgEduHiPC.tex
